<resources>
    <string name="app_name">Indoor Localization</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_scan">Scan</string>

    <string name="reload">Scan</string>

    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="tag">Tag</string>
    <string name="timer">Timer</string>

    <string name="title_activity_dblist">DBList</string>
    <string name="upload">Upload Data</string>
    <string name="deleteAll">Delete Data</string>


    <string name="title_activity_settings">Settings</string>
    <string name="urllabel">DB URL</string>
    <string name="save">Save</string>

    <string name="title_activity_recognize">Recognize</string>
    <string name="track">Recognize</string>

    <string name="sAtt">Scan</string>
    <string name="rAtt">Recognize</string>
</resources>
