<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/reloadButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload"/>
    <EditText
        android:id="@+id/tag"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reloadButton"/>

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tag"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/up"
        android:id="@+id/buttonUp"
        android:layout_alignTop="@+id/map"
        android:layout_toRightOf="@+id/buttonLeft"
        android:layout_toEndOf="@+id/buttonLeft" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/right"
        android:id="@+id/buttonRight"
        android:layout_alignTop="@+id/buttonLeft"
        android:layout_toRightOf="@+id/buttonUp"
        android:layout_toEndOf="@+id/buttonUp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/down"
        android:id="@+id/buttonDown"
        android:layout_below="@+id/buttonLeft"
        android:layout_toRightOf="@+id/buttonLeft"
        android:layout_toEndOf="@+id/buttonLeft" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/left"
        android:id="@+id/buttonLeft"
        android:layout_below="@+id/buttonUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- android:layout_height="700px"-->

 <!--
 <ListView
     android:id="@+id/listView1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/map"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="15dp" />
 -->

</RelativeLayout>